Adding sticky behavior to Navbar
This commit is to add another rule for the navbar so that it sticks on  top of the page.

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,13 @@
     border-top: solid 3px #CF6666;
     padding-top: 20px;
  } 
+
+ header {
+    background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 50;
+ }
  
  /* MAIN NAV
  ----------------------- */
